<resources>
    <!-- Strings used for application menus-->
    <string name="app_name">Users</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Users</string>
    <string name="search">Search</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for user item  -->
    <string name="full_name_user_item_placeholder">Full Name</string>
    <string name="logo_picture">logoPicture</string>
    <string name="user_item_placeholder_text">28 years from US</string>
    <string name="user_item_placehodler_clock">15:38</string>
    <string name="star_logo">starLogo</string>
</resources>