<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/logo_picture"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/tvName"
        app:srcCompat="@drawable/ic_placeholder" />

    <!-- Name -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toTopOf="@id/ivProfile"
        app:layout_constraintEnd_toStartOf="@id/ivAttachment"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/full_name_user_item_placeholder" />

    <!-- Age & Country -->
    <TextView
        android:id="@+id/tvAgeCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/ivAttachment"
        android:layout_marginEnd="10dp"

        android:text="@string/user_item_placeholder_text" />

    <!-- Star (Favorite) -->
    <ImageView
        android:id="@+id/ivAttachment"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/star_logo"
        android:src="@drawable/ic_attachment"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/tvTimestamp"
        app:layout_constraintEnd_toStartOf="@id/tvTimestamp"
        android:layout_marginEnd="8dp"
        />

    <!-- Timestamp -->
    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvName"
        android:text="@string/user_item_placehodler_clock" />

    <!-- Star (Favorite) -->
    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/star_logo"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTimestamp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
